--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,19 @@
 #spring.rabbitmq.username=admin
 #spring.rabbitmq.password=admin
 
-#spring.rabbitmq.host=178.62.48.242
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=mqtt
-#spring.rabbitmq.password=mqtt
+spring.rabbitmq.host=178.62.48.242
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=mqtt
+spring.rabbitmq.password=mqtt
+
+spring.data.mongodb.uri=mongodb://mongo-cl-27017.192.168.11.11.xip.io:61014/arduino
+
+server.port=2223
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.eureka-server-port=8761
+eureka.instance.
+#eureka.instance.ip-address=
 
 # MONGODB (MongoProperties)
 
