--- a/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,5 +1,7 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Thu May 14 14:47:10 IST 2015
+#Fri Aug 21 14:40:53 BST 2015
 build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;
+org.springsource.ide.eclipse.gradle.classname.enableSorting=false
+org.springsource.ide.eclipse.gradle.classpath.enableSorting=true
 org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=
